- removed unused code in Agent Based Simulation Long-Run Analysis.ipynb

--- a/notebooks/Agent Based Simulation Long-Run Analysis.ipynb
+++ b/notebooks/Agent Based Simulation Long-Run Analysis.ipynb
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 353,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-18T18:51:36.232034Z",
@@ -850,7 +850,7 @@
        "4    0.0405    28500.0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 353,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +891,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 354,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,20 +1029,12 @@
     "    end_time_in_seconds = data_length_in_seconds - 1\n",
     "\n",
     "    if time_interval_in_seconds is not None:\n",
-    "#         print('time_interval_in_seconds is not None')\n",
     "        if time_interval_in_seconds[0] is not None:\n",
-    "#             print('time_interval_in_seconds[0] is not None')\n",
     "            begin_time_in_seconds = time_interval_in_seconds[0]\n",
     "\n",
     "        if time_interval_in_seconds[1] is not None:\n",
-    "#             print('time_interval_in_seconds[1] is not None')\n",
     "            end_time_in_seconds = time_interval_in_seconds[1]        \n",
     "    \n",
-    "#     print(f'begin_time_in_seconds={begin_time_in_seconds}')\n",
-    "#     print(f'end_time_in_seconds={end_time_in_seconds}')\n",
-    "#     print(f'data_length_in_seconds={data_length_in_seconds}')\n",
-    "#     print(f'data_length={data_length}')\n",
-    "        \n",
     "    begin_index = int(np.floor(begin_time_in_seconds / data_length_in_seconds * data_length))\n",
     "    end_index = int(np.floor(end_time_in_seconds / data_length_in_seconds * data_length)) + 1\n",
     "    \n",
@@ -1051,34 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# convert_time_interval_in_seconds_to_indices(\n",
-    "#     data_length=model_vars_df.shape[0], \n",
-    "#     time_resolution=time_resolution, \n",
-    "#     time_interval_in_seconds=(0, 5 * 365.25 * 24 * 60 * 60), \n",
-    "#     data_interval=data_collection_options.data_collection_interval)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 274,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# begin_index, end_index = \\\n",
-    "#     convert_time_interval_in_seconds_to_indices(\n",
-    "#         data_length=model_vars_df.shape557[0], \n",
-    "#         time_resolution=time_resolution, \n",
-    "#         data_interval=data_collection_options.data_collection_interval)\n",
-    "# print(f'{begin_index}, {end_index}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,20 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# construct_full_time_axis(\n",
-    "#     data_length=model_vars_df.shape[0], \n",
-    "#     time_resolution=time_resolution, \n",
-    "#     plot_time_scale=plot_time_scale, \n",
-    "#     data_interval=data_collection_options.data_collection_interval)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,11 +1073,6 @@
     "            time_interval_in_seconds=time_interval_in_seconds, \n",
     "            data_interval=data_interval)\n",
     "    \n",
-    "#     data_length_in_seconds = data_length * data_interval * time_resolution.in_seconds\n",
-    "#     time_axis = np.linspace(0, data_length_in_seconds, data_length)[begin_index:end_index]\n",
-    "#     time_axis = \\\n",
-    "#         np.arange(begin_index, end_index,) * time_resolution.in_seconds / plot_time_scale.in_seconds() * data_interval\n",
-    "    \n",
     "    time_axis = np.linspace(0, data_length, data_length)[begin_index:end_index] * time_resolution.in_seconds / plot_time_scale.in_seconds() * data_interval\n",
     "\n",
     "    return time_axis"
@@ -1133,14 +1080,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# time_axis = \\\n",
-    "#     np.linspace(0, model_vars_df.shape[0], model_vars_df.shape[0]) * \\\n",
-    "#     time_resolution.in_seconds / plot_time_scale.in_seconds() * data_collection_options.data_collection_interval\n",
-    "\n",
     "time_axis = \\\n",
     "    construct_time_axis(data_length=model_vars_df.shape[0], \n",
     "                        time_resolution=time_resolution, \n",
@@ -1151,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1265,22 +1208,6 @@
     "    time_interval_to_plot_in_seconds: tp.Optional[tp.Tuple[tp.Optional[float], tp.Optional[float]]] = None, \n",
     "    figure_size: tp.Tuple[float, float] = DEFAULT_FIGURE_SIZE, \n",
     "    data_interval: int = 1):\n",
-    "\n",
-    "#     begin_index, end_index = \\\n",
-    "#         convert_time_interval_in_seconds_to_indices(\n",
-    "#             data_length=model_vars_df.shape[0], \n",
-    "#             time_resolution=time_resolution, \n",
-    "#             time_interval_in_seconds=time_interval_to_plot_in_seconds, \n",
-    "#             data_interval=data_collection_options.data_collection_interval)\n",
-    "    \n",
-    "#     full_time_axis = \\\n",
-    "#         construct_full_time_axis(\n",
-    "#         data_length=model_vars_df.shape[0], \n",
-    "#         time_resolution=time_resolution, \n",
-    "#         plot_time_scale=plot_time_scale, \n",
-    "#         data_interval=data_collection_options.data_collection_interval)\n",
-    "    \n",
-    "#    time_axis_to_plot = full_time_axis[begin_index:end_index]\n",
     "    \n",
     "    begin_index, end_index, time_axis_to_plot = \\\n",
     "        get_indices_and_time_axis_to_plot(\n",
@@ -1362,56 +1289,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 316,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def plot_supply(model_vars_df: pd.DataFrame, \n",
-    "#                 plot_time_scale: TimeScale, \n",
-    "#                 time_resolution: TimeResolution, \n",
-    "#                 time_interval_to_plot_in_seconds: tp.Optional[tp.Tuple[tp.Optional[float], tp.Optional[float]]] = None, \n",
-    "#                 supply_label: str = SUPPLY_LABEL, \n",
-    "#                 figure_size: tp.Tuple[float, float] = DEFAULT_FIGURE_SIZE, \n",
-    "#                 data_interval: int = 1):\n",
-    "  \n",
-    "#     begin_index, end_index = \\\n",
-    "#         convert_time_interval_in_seconds_to_indices(\n",
-    "#             data_length=model_vars_df.shape[0], \n",
-    "#             time_resolution=time_resolution, \n",
-    "#             time_interval_in_seconds=time_interval_to_plot_in_seconds, \n",
-    "#             data_interval=data_collection_options.data_collection_interval)\n",
-    "    \n",
-    "#     full_time_axis = \\\n",
-    "#         construct_full_time_axis(\n",
-    "#         data_length=model_vars_df.shape[0], \n",
-    "#         time_resolution=time_resolution, \n",
-    "#         plot_time_scale=plot_time_scale, \n",
-    "#         data_interval=data_collection_options.data_collection_interval)\n",
-    "# #     print(f'length of full time axis = {len(full_time_axis)}')\n",
-    "# #     print(f'length of full data = {len(model_vars_df.loc[:, supply_label])}')\n",
-    "\n",
-    "# #     time_axis = \\\n",
-    "# #         construct_time_axis(\n",
-    "# #             data_length=model_vars_df.shape[0], \n",
-    "# #             time_resolution=time_resolution, \n",
-    "# #             time_interval_in_seconds=time_interval_to_plot_in_seconds, \n",
-    "# #             plot_time_scale=plot_time_scale, \n",
-    "# #             data_interval=data_interval)\n",
-    "    \n",
-    "#     time_axis_to_plot = full_time_axis[begin_index:end_index]\n",
-    "#     data_to_plot = model_vars_df.loc[:, supply_label].values[begin_index:end_index]\n",
-    "    \n",
-    "# #     print(f'length of time axis to plot={len(time_axis_to_plot)}')\n",
-    "# #     print(f'length of data to plot={len(data_to_plot)}')\n",
-    "        \n",
-    "#     plt.figure(0, figsize=figure_size);\n",
-    "#     plt.plot(time_axis_to_plot, data_to_plot);\n",
-    "#     plt.title('OVL Supply');\n",
-    "#     plt.xlabel(f'time in {plot_time_scale.value}');"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1420,13 +1297,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [],
    "source": [
     "plot_begin_years = 0.0\n",
-    "# plot_end_years = 5 * 365.25 * 24 * 60 * 60\n",
-    "plot_end_years = 0.75 * 365.25 * 24 * 60 * 60  # corresponds to 9 months\n",
+    "# plot_end_years = 5 * 365.25 * 24 * 60 * 60  # 5 years\n",
+    "plot_end_years = 0.75 * 365.25 * 24 * 60 * 60  # 9 months\n",
     "time_interval_to_plot_in_seconds = (plot_begin_years, plot_end_years)"
    ]
   },
@@ -1439,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 367,
    "metadata": {
     "scrolled": false
    },
@@ -1474,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [
     {
@@ -1507,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [
     {
@@ -1542,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [
     {
@@ -1572,12 +1449,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Correlation between Skew and Futures Price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 371,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.         -0.46706529]\n",
+      " [-0.46706529  1.        ]]\n",
+      "[[ 1.         -0.46704101]\n",
+      " [-0.46704101  1.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, ticker in enumerate(tickers_with_ovl):\n",
+    "    if i > 0:\n",
+    "        break\n",
+    "    skew = model_vars_df.loc[:, skew_label(ticker)].values\n",
+    "    futures_price = model_vars_df.loc[:, futures_price_label(ticker)].values\n",
+    "    spot_price = model_vars_df.loc[:, spot_price_label(ticker)].values\n",
+    "    print(np.corrcoef(skew, futures_price))\n",
+    "    print(np.corrcoef(skew, spot_price))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Spot vs. Futures Prices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 372,
    "metadata": {
     "scrolled": false
    },
