- introduced additional directory level for historical data corresponding to the exchange where the data was sourced from

--- a/notebooks/Data Import.ipynb
+++ b/notebooks/Data Import.ipynb
@@ -53,7 +53,11 @@
     "    save_price_histories    \n",
     ")\n",
     "\n",
-    "from ovm.paths import HISTORICAL_DATA_DIRECTORY\n",
+    "from ovm.paths import (\n",
+    "    HistoricalDataSource, \n",
+    "    construct_historical_data_directory\n",
+    ")\n",
+    "\n",
     "from ovm.time_resolution import TimeResolution"
    ]
   },
@@ -66,30 +70,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-17T20:40:31.030960Z",
      "start_time": "2021-01-17T20:40:30.994588Z"
     }
    },
+   "outputs": [],
+   "source": [
+    "# time_resolution = TimeResolution.FIFTEEN_SECONDS\n",
+    "time_resolution = TimeResolution.ONE_MINUTE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Set Exchange to Use as Data Source"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "historical_data_source=HistoricalDataSource.FTX"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Construct Directory Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/michael/PycharmProjects/overlay-monetary/data/historical/1m'"
+       "'/home/michael/PycharmProjects/overlay-monetary/data/historical/ftx/1m'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# time_resolution = TimeResolution.FIFTEEN_SECONDS\n",
-    "time_resolution = TimeResolution.ONE_MINUTE\n",
-    "# directory_path = time_resolution.value\n",
-    "directory_path = os.path.join(HISTORICAL_DATA_DIRECTORY, time_resolution.value)\n",
+    "directory_path = \\\n",
+    "    construct_historical_data_directory(\n",
+    "        historical_data_source=historical_data_source.FTX, \n",
+    "        time_resolution=time_resolution)\n",
     "directory_path"
    ]
   },
