--- a/notebooks/Return Estimation.ipynb
+++ b/notebooks/Return Estimation.ipynb
@@ -47,7 +47,10 @@
     "    load_price_history\n",
     ")\n",
     "\n",
-    "from ovm.paths import HISTORICAL_DATA_DIRECTORY\n",
+    "from ovm.paths import (\n",
+    "    HistoricalDataSource, \n",
+    "    construct_historical_data_directory\n",
+    ")\n",
     "\n",
     "from ovm.time_resolution import TimeResolution"
    ]
@@ -117,32 +120,10 @@
    "outputs": [],
    "source": [
     "time_resolution = TimeResolution.FIFTEEN_SECONDS\n",
-    "# directory_path = time_resolution.value\n",
-    "directory_path = os.path.join(HISTORICAL_DATA_DIRECTORY, time_resolution.value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-01-16T18:09:50.134746Z",
-     "start_time": "2021-01-16T18:09:50.092514Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/michael/PycharmProjects/overlay-monetary/data/historical/15s'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "directory_path = \\\n",
+    "    construct_historical_data_directory(\n",
+    "        historical_data_source=HistoricalDataSource.FTX, \n",
+    "        time_resolution=time_resolution)\n",
     "directory_path"
    ]
   },
@@ -550,10 +531,10 @@
        "  <th></th>                        <td></td>          <th>  No. Observations:  </th>    <td>2515223</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>           <td>Thu, Jan 21 2021</td>  <th>  Df Residuals:      </th>    <td>2515218</td>  \n",
+       "  <th>Date:</th>           <td>Fri, Jan 22 2021</td>  <th>  Df Residuals:      </th>    <td>2515218</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>               <td>15:34:48</td>      <th>  Df Model:          </th>       <td>5</td>     \n",
+       "  <th>Time:</th>               <td>13:35:34</td>      <th>  Df Model:          </th>       <td>5</td>     \n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
@@ -595,8 +576,8 @@
        "Distribution:                  Normal   AIC:                       4.29714e+06\n",
        "Method:            Maximum Likelihood   BIC:                       4.29721e+06\n",
        "                                        No. Observations:              2515223\n",
-       "Date:                Thu, Jan 21 2021   Df Residuals:                  2515218\n",
-       "Time:                        15:34:48   Df Model:                            5\n",
+       "Date:                Fri, Jan 22 2021   Df Residuals:                  2515218\n",
+       "Time:                        13:35:34   Df Model:                            5\n",
        "                                  Mean Model                                  \n",
        "==============================================================================\n",
        "                  coef    std err          t      P>|t|       95.0% Conf. Int.\n",
@@ -687,10 +668,10 @@
        "  <th></th>                        <td></td>          <th>  No. Observations:  </th>    <td>2515223</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>           <td>Thu, Jan 21 2021</td>  <th>  Df Residuals:      </th>    <td>2515219</td>  \n",
+       "  <th>Date:</th>           <td>Fri, Jan 22 2021</td>  <th>  Df Residuals:      </th>    <td>2515219</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>               <td>15:34:56</td>      <th>  Df Model:          </th>       <td>4</td>     \n",
+       "  <th>Time:</th>               <td>13:35:42</td>      <th>  Df Model:          </th>       <td>4</td>     \n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
@@ -729,8 +710,8 @@
        "Distribution:                  Normal   AIC:                       4.31119e+06\n",
        "Method:            Maximum Likelihood   BIC:                       4.31124e+06\n",
        "                                        No. Observations:              2515223\n",
-       "Date:                Thu, Jan 21 2021   Df Residuals:                  2515219\n",
-       "Time:                        15:34:56   Df Model:                            4\n",
+       "Date:                Fri, Jan 22 2021   Df Residuals:                  2515219\n",
+       "Time:                        13:35:42   Df Model:                            4\n",
        "                                 Mean Model                                 \n",
        "============================================================================\n",
        "                 coef    std err          t      P>|t|      95.0% Conf. Int.\n",
@@ -842,10 +823,10 @@
        "  <th></th>                        <td></td>          <th>  No. Observations:  </th>    <td>2515223</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>           <td>Thu, Jan 21 2021</td>  <th>  Df Residuals:      </th>    <td>2515218</td>  \n",
+       "  <th>Date:</th>           <td>Fri, Jan 22 2021</td>  <th>  Df Residuals:      </th>    <td>2515218</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>               <td>15:35:08</td>      <th>  Df Model:          </th>       <td>5</td>     \n",
+       "  <th>Time:</th>               <td>13:35:54</td>      <th>  Df Model:          </th>       <td>5</td>     \n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
@@ -887,8 +868,8 @@
        "Distribution:                  Normal   AIC:                       4.25570e+06\n",
        "Method:            Maximum Likelihood   BIC:                       4.25577e+06\n",
        "                                        No. Observations:              2515223\n",
-       "Date:                Thu, Jan 21 2021   Df Residuals:                  2515218\n",
-       "Time:                        15:35:08   Df Model:                            5\n",
+       "Date:                Fri, Jan 22 2021   Df Residuals:                  2515218\n",
+       "Time:                        13:35:54   Df Model:                            5\n",
        "                                 Mean Model                                 \n",
        "============================================================================\n",
        "                 coef    std err          t      P>|t|      95.0% Conf. Int.\n",
@@ -976,10 +957,10 @@
        "  <th></th>                        <td></td>          <th>  No. Observations:  </th>    <td>2515223</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>           <td>Thu, Jan 21 2021</td>  <th>  Df Residuals:      </th>    <td>2515217</td>  \n",
+       "  <th>Date:</th>           <td>Fri, Jan 22 2021</td>  <th>  Df Residuals:      </th>    <td>2515217</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>               <td>15:35:20</td>      <th>  Df Model:          </th>       <td>6</td>     \n",
+       "  <th>Time:</th>               <td>13:36:06</td>      <th>  Df Model:          </th>       <td>6</td>     \n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
@@ -1024,8 +1005,8 @@
        "Distribution:                  Normal   AIC:                       4.23991e+06\n",
        "Method:            Maximum Likelihood   BIC:                       4.23999e+06\n",
        "                                        No. Observations:              2515223\n",
-       "Date:                Thu, Jan 21 2021   Df Residuals:                  2515217\n",
-       "Time:                        15:35:20   Df Model:                            6\n",
+       "Date:                Fri, Jan 22 2021   Df Residuals:                  2515217\n",
+       "Time:                        13:36:06   Df Model:                            6\n",
        "                                 Mean Model                                 \n",
        "============================================================================\n",
        "                 coef    std err          t      P>|t|      95.0% Conf. Int.\n",
@@ -1112,10 +1093,10 @@
        "  <th></th>                        <td></td>          <th>  No. Observations:  </th>    <td>2515223</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>           <td>Thu, Jan 21 2021</td>  <th>  Df Residuals:      </th>    <td>2515218</td>  \n",
+       "  <th>Date:</th>           <td>Fri, Jan 22 2021</td>  <th>  Df Residuals:      </th>    <td>2515218</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>               <td>15:35:32</td>      <th>  Df Model:          </th>       <td>5</td>     \n",
+       "  <th>Time:</th>               <td>13:36:18</td>      <th>  Df Model:          </th>       <td>5</td>     \n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
@@ -1157,8 +1138,8 @@
        "Distribution:                  Normal   AIC:                       4.32837e+06\n",
        "Method:            Maximum Likelihood   BIC:                       4.32844e+06\n",
        "                                        No. Observations:              2515223\n",
-       "Date:                Thu, Jan 21 2021   Df Residuals:                  2515218\n",
-       "Time:                        15:35:32   Df Model:                            5\n",
+       "Date:                Fri, Jan 22 2021   Df Residuals:                  2515218\n",
+       "Time:                        13:36:18   Df Model:                            5\n",
        "                                 Mean Model                                 \n",
        "============================================================================\n",
        "                 coef    std err          t      P>|t|      95.0% Conf. Int.\n",
@@ -1249,10 +1230,10 @@
        "  <th></th>                           <td></td>             <th>  No. Observations:  </th>    <td>2515223</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>              <td>Thu, Jan 21 2021</td>     <th>  Df Residuals:      </th>    <td>2515218</td>  \n",
+       "  <th>Date:</th>              <td>Fri, Jan 22 2021</td>     <th>  Df Residuals:      </th>    <td>2515218</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                  <td>15:35:41</td>         <th>  Df Model:          </th>       <td>5</td>     \n",
+       "  <th>Time:</th>                  <td>13:36:27</td>         <th>  Df Model:          </th>       <td>5</td>     \n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
@@ -1300,8 +1281,8 @@
        "Distribution:      Standardized Student's t   AIC:                       3.54368e+06\n",
        "Method:                  Maximum Likelihood   BIC:                       3.54374e+06\n",
        "                                              No. Observations:              2515223\n",
-       "Date:                      Thu, Jan 21 2021   Df Residuals:                  2515218\n",
-       "Time:                              15:35:41   Df Model:                            5\n",
+       "Date:                      Fri, Jan 22 2021   Df Residuals:                  2515218\n",
+       "Time:                              13:36:27   Df Model:                            5\n",
        "                                  Mean Model                                 \n",
        "=============================================================================\n",
        "                 coef    std err          t      P>|t|       95.0% Conf. Int.\n",
@@ -1411,33 +1392,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.041661</td>\n",
-       "      <td>0.515203</td>\n",
-       "      <td>0.041590</td>\n",
+       "      <td>-0.109799</td>\n",
+       "      <td>0.500629</td>\n",
+       "      <td>-0.109870</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.317700</td>\n",
-       "      <td>0.474048</td>\n",
-       "      <td>0.317629</td>\n",
+       "      <td>-0.596806</td>\n",
+       "      <td>0.463943</td>\n",
+       "      <td>-0.596877</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.391244</td>\n",
-       "      <td>0.461300</td>\n",
-       "      <td>0.391173</td>\n",
+       "      <td>-0.296657</td>\n",
+       "      <td>0.506438</td>\n",
+       "      <td>-0.296729</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-0.211793</td>\n",
-       "      <td>0.462518</td>\n",
-       "      <td>-0.211864</td>\n",
+       "      <td>0.484932</td>\n",
+       "      <td>0.484769</td>\n",
+       "      <td>0.484861</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-0.272039</td>\n",
-       "      <td>0.439516</td>\n",
-       "      <td>-0.272110</td>\n",
+       "      <td>-0.483777</td>\n",
+       "      <td>0.497650</td>\n",
+       "      <td>-0.483848</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1445,11 +1426,11 @@
       ],
       "text/plain": [
        "       data  volatility    errors\n",
-       "0  0.041661    0.515203  0.041590\n",
-       "1  0.317700    0.474048  0.317629\n",
-       "2  0.391244    0.461300  0.391173\n",
-       "3 -0.211793    0.462518 -0.211864\n",
-       "4 -0.272039    0.439516 -0.272110"
+       "0 -0.109799    0.500629 -0.109870\n",
+       "1 -0.596806    0.463943 -0.596877\n",
+       "2 -0.296657    0.506438 -0.296729\n",
+       "3  0.484932    0.484769  0.484861\n",
+       "4 -0.483777    0.497650 -0.483848"
       ]
      },
      "execution_count": 25,
@@ -1511,10 +1492,10 @@
        "  <th></th>                           <td></td>             <th>  No. Observations:  </th>    <td>2515223</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>              <td>Thu, Jan 21 2021</td>     <th>  Df Residuals:      </th>    <td>2515217</td>  \n",
+       "  <th>Date:</th>              <td>Fri, Jan 22 2021</td>     <th>  Df Residuals:      </th>    <td>2515217</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                  <td>15:35:58</td>         <th>  Df Model:          </th>       <td>6</td>     \n",
+       "  <th>Time:</th>                  <td>13:36:44</td>         <th>  Df Model:          </th>       <td>6</td>     \n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
@@ -1565,8 +1546,8 @@
        "Distribution:      Standardized Student's t   AIC:                       3.54474e+06\n",
        "Method:                  Maximum Likelihood   BIC:                       3.54482e+06\n",
        "                                              No. Observations:              2515223\n",
-       "Date:                      Thu, Jan 21 2021   Df Residuals:                  2515217\n",
-       "Time:                              15:35:58   Df Model:                            6\n",
+       "Date:                      Fri, Jan 22 2021   Df Residuals:                  2515217\n",
+       "Time:                              13:36:44   Df Model:                            6\n",
        "                                  Mean Model                                 \n",
        "=============================================================================\n",
        "                 coef    std err          t      P>|t|       95.0% Conf. Int.\n",
@@ -1656,10 +1637,10 @@
        "  <th></th>                           <td></td>             <th>  No. Observations:  </th>    <td>2515223</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>              <td>Thu, Jan 21 2021</td>     <th>  Df Residuals:      </th>    <td>2515216</td>  \n",
+       "  <th>Date:</th>              <td>Fri, Jan 22 2021</td>     <th>  Df Residuals:      </th>    <td>2515216</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                  <td>15:36:10</td>         <th>  Df Model:          </th>       <td>7</td>     \n",
+       "  <th>Time:</th>                  <td>13:36:58</td>         <th>  Df Model:          </th>       <td>7</td>     \n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
@@ -1713,8 +1694,8 @@
        "Distribution:      Standardized Student's t   AIC:                       3.55106e+06\n",
        "Method:                  Maximum Likelihood   BIC:                       3.55115e+06\n",
        "                                              No. Observations:              2515223\n",
-       "Date:                      Thu, Jan 21 2021   Df Residuals:                  2515216\n",
-       "Time:                              15:36:10   Df Model:                            7\n",
+       "Date:                      Fri, Jan 22 2021   Df Residuals:                  2515216\n",
+       "Time:                              13:36:58   Df Model:                            7\n",
        "                                  Mean Model                                  \n",
        "==============================================================================\n",
        "                  coef    std err          t      P>|t|       95.0% Conf. Int.\n",
@@ -1811,10 +1792,10 @@
        "  <th></th>                             <td></td>                <th>  No. Observations:  </th>    <td>2515223</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>                <td>Thu, Jan 21 2021</td>        <th>  Df Residuals:      </th>    <td>2515217</td>  \n",
+       "  <th>Date:</th>                <td>Fri, Jan 22 2021</td>        <th>  Df Residuals:      </th>    <td>2515217</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                    <td>15:36:26</td>            <th>  Df Model:          </th>       <td>6</td>     \n",
+       "  <th>Time:</th>                    <td>13:37:14</td>            <th>  Df Model:          </th>       <td>6</td>     \n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
@@ -1865,8 +1846,8 @@
        "Distribution:      Standardized Skew Student's t   AIC:                       3.54368e+06\n",
        "Method:                       Maximum Likelihood   BIC:                       3.54375e+06\n",
        "                                                   No. Observations:              2515223\n",
-       "Date:                           Thu, Jan 21 2021   Df Residuals:                  2515217\n",
-       "Time:                                   15:36:26   Df Model:                            6\n",
+       "Date:                           Fri, Jan 22 2021   Df Residuals:                  2515217\n",
+       "Time:                                   13:37:14   Df Model:                            6\n",
        "                                  Mean Model                                 \n",
        "=============================================================================\n",
        "                 coef    std err          t      P>|t|       95.0% Conf. Int.\n",
