- added debug notebook to analyze slowdown

--- a/notebooks/Agent Based Simulation Long-Run Analysis with Snipers and Liquidators.ipynb
+++ b/notebooks/Agent Based Simulation Long-Run Analysis with Snipers and Liquidators.ipynb
@@ -597,6 +597,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "open positions on ETH-USD = 43867\n",
+      "open positions on COMP-USD = 70003\n",
+      "open positions on LINK-USD = 91934\n",
+      "open positions on OVL-USD = 123562\n"
+     ]
+    }
+   ],
+   "source": [
+    "for market_name, market in monetary_model.fmarkets.items():\n",
+    "    print(f'open positions on {market_name} = {len(market.positions)}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
