- moved function to convert_time_in_seconds_to_index

--- a/notebooks/Agent Based Simulation Long-Run Analysis with Snipers and Liquidators.ipynb
+++ b/notebooks/Agent Based Simulation Long-Run Analysis with Snipers and Liquidators.ipynb
@@ -24,22 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 92,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-18T18:51:27.630297Z",
      "start_time": "2021-01-18T18:51:26.955526Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "environment variable OVERLAY_MONETARY_BASE_PATH not set defaulting to /home/michael/PycharmProjects/overlay-monetary\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ovm.monetary.model import MonetaryModel\n",
     "\n",
@@ -91,6 +83,7 @@
     "\n",
     "from ovm.monetary.plots import (\n",
     "    DEFAULT_FIGURE_SIZE, \n",
+    "    convert_time_in_seconds_to_index, \n",
     "    convert_time_interval_in_seconds_to_indices, \n",
     "    construct_full_time_axis, \n",
     "    construct_time_axis, \n",
@@ -1022,10 +1015,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def convert_time_in_seconds_to_index(\n",
-    "    time_resolution: TimeResolution, \n",
-    "    time_in_seconds: float):\n",
-    "    return int(np.floor(time_in_seconds / time_resolution.in_seconds))"
+    "# def convert_time_in_seconds_to_index(\n",
+    "#     time_resolution: TimeResolution, \n",
+    "#     time_in_seconds: float):\n",
+    "#     return int(np.floor(time_in_seconds / time_resolution.in_seconds))"
    ]
   },
   {
